--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://peterampazzo.github.io/project-website-template/"
+baseURL = "https://kommodeskab.github.io/SocialProjectWebsite/"
 title = "Computational Social Science Project (Group 2)"
 description = "A project in 02467 Computational Social Science (2024) in connectivity of global airports and text analysis of their reviews."
 relativeURLs = true
